--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
     <script src="angular-route/angular-route.js" charset="utf-8"></script>
     <script src="angular-cookies/angular-cookies.js" charset="utf-8"></script>
 
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="materialize/dist/css/materialize.min.css"  media="screen,projection"/>
+
     <script src="assets/app.js" charset="utf-8"></script>
     <script src="assets/factories/userFactory.js" charset="utf-8"></script>
     <script src="assets/factories/bidFactory.js" charset="utf-8"></script>
